@@ -13,6 +13,10 @@ version 1.3.3
   on selection of just one variable plus the constant
 - Graph control dialog: add one-click option to force use of a
   single y axis
+- New: in case of AR(1) estimation (Cochrane-Orcutt and similar), if
+  a lagged dependent variable is included then we automatically
+  use the procedure set out in Ramanathan, 5e, p. 450, to generate
+  consistent estimates of the standard errors
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
